--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Color/Views/HomeView.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Color/Views/HomeView.xaml
@@ -2,8 +2,49 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:infControls="clr-namespace:Samples.Infrastructure.Controls;assembly=Samples.Infrastructure"
+                      xmlns:extToolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit/extended"
+                      xmlns:System="clr-namespace:System;assembly=mscorlib"
                       Title="Color Controls">
-    <Grid>
-        <TextBlock Text="Color View" />
+    <Grid Margin="25">
+        <!--<DataGrid x:Name="_dataGrid"
+            AutoGenerateColumns="False"
+            CanUserAddRows="False"
+            CanUserDeleteRows="False"
+            CanUserReorderColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Level" Binding="{Binding Level}" IsReadOnly="True" />
+                <DataGridTemplateColumn Header="Color">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <extToolkit:ColorPicker DisplayColorAndName="True" SelectedColor="{Binding Color, UpdateSourceTrigger=PropertyChanged}" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>-->
+
+        <StackPanel>
+            <extToolkit:CheckComboBox x:Name="_combo" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                 DisplayMemberPath="Color"
+                                 SelectedValuePath="Level"
+                                 SelectedItems="{Binding SelectedItems}" />
+
+            <!--<extToolkit:CheckComboBox x:Name="_combo" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                      SelectedValue="{Binding SelectedValues}" />-->
+            
+            <!--<ComboBox x:Name="_combo2" HorizontalAlignment="Center" VerticalAlignment="Center"
+                      IsEditable="True"
+                      DisplayMemberPath="Color"
+                      />-->
+
+            <extToolkit:CheckListBox x:Name="_listBox" Height="250"
+                                      DisplayMemberPath="Color"
+                                      SelectedValuePath="Level"
+                                     SelectedItems="{Binding SelectedItems}" />
+
+            <!--<extToolkit:CheckListBox x:Name="_listBox" Height="250"
+                                     SelectedValue="{Binding SelectedValues}"
+                                     />-->
+        </StackPanel>
     </Grid>
 </infControls:DemoView>
