--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Text/Views/HomeView.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Text/Views/HomeView.xaml
@@ -2,8 +2,12 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:infControls="clr-namespace:Samples.Infrastructure.Controls;assembly=Samples.Infrastructure"
+                      xmlns:extToolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit/extended"
                       Title="Text Controls">
     <Grid>
-        <TextBlock Text="Text View" />
+        <extToolkit:TokenizedTextBox x:Name="_textBox"
+                                     DisplayMemberPath="FullName"
+                                     SearchMemberPath="FirstName"
+                                     ValueMemberPath="Id" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250"  />
     </Grid>
 </infControls:DemoView>
