--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/ButtonSpinner/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/ButtonSpinner/Themes/Generic.xaml
@@ -3,90 +3,55 @@
                     xmlns:local="clr-namespace:Microsoft.Windows.Controls"
                     xmlns:chrome="clr-namespace:Microsoft.Windows.Controls.Chromes">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../../Themes/Aero/Buttons.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
     <!-- =============================================================================== -->
     <!-- ButtonSpinner                                                                   -->
     <!-- =============================================================================== -->
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-
-    <SolidColorBrush x:Key="SpinButtonGlyphNormalForegroundFillKey" Color="#FF000000" />
-    <SolidColorBrush x:Key="SpinButtonGlyphDisabledForegroundFillKey" Color="DarkGray" />
-
+    
     <Style TargetType="{x:Type local:ButtonSpinner}">
+        <Setter Property="Background" Value="{StaticResource ControlNormalBackgroundKey}" />
         <Setter Property="Focusable" Value="False" />
         <Setter Property="IsTabStop" Value="True" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
-        <Setter Property="BorderBrush">
-            <Setter.Value>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFA3AEB9" Offset="0" />
-                    <GradientStop Color="#FF8399A9" Offset="0.375" />
-                    <GradientStop Color="#FF718597" Offset="0.375" />
-                    <GradientStop Color="#FF617584" Offset="1" />
-                </LinearGradientBrush>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="{StaticResource ControlNormalBorderFillKey}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:ButtonSpinner}">
-                    <Grid>
-                        <Border x:Name="ElementContainer" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}">
-                            <DockPanel Focusable="False">
-                                <Grid DockPanel.Dock="Right" Visibility="{TemplateBinding ShowButtonSpinner, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                        <RowDefinition Height="1" />
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <RepeatButton x:Name="IncreaseButton" SnapsToDevicePixels="True" Grid.Row="0" ClickMode="Press" IsTabStop="{Binding IsTabStop, RelativeSource={RelativeSource TemplatedParent}}" >
-                                        <RepeatButton.Template>
-                                            <ControlTemplate TargetType="RepeatButton">
-                                                <ContentPresenter />
-                                            </ControlTemplate>
-                                        </RepeatButton.Template>
-                                        <Grid>
-                                            <chrome:ButtonChrome CornerRadius="0"
-                                                                 RenderEnabled="{TemplateBinding IsEnabled}"
-                                                                 RenderMouseOver="{Binding IsMouseOver, ElementName=IncreaseButton}"
-                                                                 RenderPressed="{Binding IsPressed, ElementName=IncreaseButton}">
-                                                <Path x:Name="_increaseGlyph" Width="7" Height="4" Data="M 0,3 C0,3 0,4 0,4 0,4 3,4 3,4 3,4 3,3 3,3 3,3 4,3 4,3 4,3 4,4 4,4 4,4 7,4 7,4 7,4 7,3 7,3 7,3 6,3 6,3 6,3 6,2 6,2 6,2 5,2 5,2 5,2 5,1 5,1 5,1 4,1 4,1 4,1 4,0 4,0 4,0 3,0 3,0 3,0 3,1 3,1 3,1 2,1 2,1 2,1 2,2 2,2 2,2 1,2 1,2 1,2 1,3 1,3 1,3 0,3 0,3 z" 
-                                                      Fill="{StaticResource SpinButtonGlyphNormalForegroundFillKey}"
-                                                      Margin="5,1" Focusable="False" />
-                                            </chrome:ButtonChrome>
-                                        </Grid>
-                                    </RepeatButton>
-                                    <RepeatButton x:Name="DecreaseButton" SnapsToDevicePixels="True" Grid.Row="2" ClickMode="Press" IsTabStop="{Binding IsTabStop, RelativeSource={RelativeSource TemplatedParent}}" >
-                                        <RepeatButton.Template>
-                                            <ControlTemplate TargetType="RepeatButton">
-                                                <ContentPresenter />
-                                            </ControlTemplate>
-                                        </RepeatButton.Template>
-                                        <Grid>
-                                            <chrome:ButtonChrome CornerRadius="0"
-                                                                 RenderEnabled="{TemplateBinding IsEnabled}"
-                                                                 RenderMouseOver="{Binding IsMouseOver, ElementName=DecreaseButton}"
-                                                                 RenderPressed="{Binding IsPressed, ElementName=DecreaseButton}" >
-                                                <Path x:Name="_decreaseGlyph" Width="7" Height="4" Data="M 0,1 C0,1 0,0 0,0 0,0 3,0 3,0 3,0 3,1 3,1 3,1 4,1 4,1 4,1 4,0 4,0 4,0 7,0 7,0 7,0 7,1 7,1 7,1 6,1 6,1 6,1 6,2 6,2 6,2 5,2 5,2 5,2 5,3 5,3 5,3 4,3 4,3 4,3 4,4 4,4 4,4 3,4 3,4 3,4 3,3 3,3 3,3 2,3 2,3 2,3 2,2 2,2 2,2 1,2 1,2 1,2 1,1 1,1 1,1 0,1 0,1 z" 
-                                                      Fill="{StaticResource SpinButtonGlyphNormalForegroundFillKey}"
-                                                      Margin="5,1" Focusable="False" />
-                                            </chrome:ButtonChrome>
-                                        </Grid>
-                                    </RepeatButton>
-                                </Grid>
-                                <ContentControl x:Name="presentationSite" Focusable="False"
-                                                HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                Content="{TemplateBinding Content}" />
-                            </DockPanel>
-                        </Border>
-                    </Grid>
+                    <Border x:Name="Border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            
+                            <ContentPresenter Focusable="False" />
+
+                            <Grid Grid.Column="1" Visibility="{TemplateBinding ShowButtonSpinner, Converter={StaticResource BooleanToVisibilityConverter}}" Width="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+
+                                <RepeatButton x:Name="PART_IncreaseButton" 
+                                              Style="{StaticResource SpinnerButtonStyle}"
+                                              IsTabStop="{TemplateBinding IsTabStop}" ContentTemplate="{StaticResource IncreaseGlyphKey}" />
+
+                                <RepeatButton x:Name="PART_DecreaseButton" Grid.Row="1" 
+                                              Style="{StaticResource SpinnerButtonStyle}"
+                                              IsTabStop="{TemplateBinding IsTabStop}" ContentTemplate="{StaticResource DecreaseGlyphKey}" />
+                            </Grid>
+                        </Grid>
+                    </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter TargetName="_increaseGlyph" Property="Fill" Value="{StaticResource SpinButtonGlyphDisabledForegroundFillKey}" />
-                            <Setter TargetName="_decreaseGlyph" Property="Fill" Value="{StaticResource SpinButtonGlyphDisabledForegroundFillKey}" />
+                            <Setter Property="Background" Value="{StaticResource ControlDisabledBackgroundKey}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
